--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yanınızdayız | Dijital Usta</title>
-  <link rel="preconnect" href="https://yaninizdayizapi.dijitalusta.net" />
-  <link rel="stylesheet" href="./s/site.css?v=2" />
+  <link rel="preconnect" href="https://api.yaninizdayiz.dijitalusta.net" />
+  <link rel="preload" href="./s/PublicSans-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin />
+  <link rel="stylesheet" href="./s/site.css?v=5" />
 <link rel="icon" type="image/x-icon" href="./s/favicon.ico" />
 </head>
 
@@ -94,8 +95,8 @@
       </div>
     </div>
   </footer>
-  <script src="./s/site.js?v=1" defer></script>
-  <script src="./s/code/pages/index.js?v=1" defer></script>
+  <script src="./s/site.js?v=5" defer></script>
+  <script src="./s/code/pages/index.js?v=5" defer></script>
 </body>
 
 </html>
