concent page added

--- a/kobi.html
+++ b/kobi.html
@@ -102,7 +102,7 @@
     <div class="footer-bottom">
       <div class="footer-content">
         <span>© 2026 <a href="https://dijitalusta.net">Dijital Usta</a> | Tüm Haklar Saklıdır.</span>
-        <a href="https://panel.dijitalusta.net/concent.html">KVKK Aydınlatma Metni ve Açık Rıza Formu</a>
+        <a href="./concent.html">KVKK Aydınlatma Metni ve Açık Rıza Formu</a>
       </div>
     </div>
   </footer>
