concent page padding

--- a/concent.html
+++ b/concent.html
@@ -13,7 +13,7 @@
 
 <body>
   <header><a href="./"><img src="./s/logo-header.png" alt="Yanınızdayız" /></a></header>
-  <main>
+  <main class="text">
    <h2>KVKK Aydınlatma Metni ve Açık Rıza Formu</h2>
 
     <p>6698 sayılı Kişisel Verilerin Korunması Kanunu (“<b>KVKK</b>”) uyarınca, kişisel verilerinizin işlenmesi
