concent page email fix

--- a/concent.html
+++ b/concent.html
@@ -72,7 +72,7 @@
     <p><b>Habitat Derneği</b></p>
     <p>Salacak, Neyzenbaşı Halil Can Sk. No:21, 34668 Üsküdar/İstanbul</p>
     <p>Tel: (0212) 265 33 14</p>
-    <p>E-posta: <a href="/cdn-cgi/l/email-protection#573e393138173f36353e2336233332253932303e79382530"><span class="__cf_email__" data-cfemail="a3cacdc5cce3cbc2c1cad7c2d7c7c6d1cdc6c4ca8dccd1c4">[email&#160;protected]</span></a>&nbsp;</p>
+    <p>E-posta: <a href="mailto:info@habitatdernegi.org">info@habitatdernegi.org</a></p>
     <p><strong>ÖZEL NİTELİKLİ KİŞİSEL VERİLERİN İŞLENMESİNE İLİŞKİN AÇIK RIZA FORMU</strong></p>
     <p>Dijital Usta Projesi kapsamında gerçekleştirilen etkinliklere&nbsp; katılımım çerçevesinde sunacağım Özel
       Nitelikli Kişisel Verilerimin Aydınlatma Metni kapsamında bilgilendirildiğim üzere işlenmesine rıza
