--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <ul>
 <li>Adıyaman, Hatay, Kahramanmaraş veya Malatya'da ikamet edenler.</li>
 <li>Bir kurumda çalışmayanlar ve en az lise mezunu olanlar.</li>
-<li>18-30 yaş arası gençler.</li>
+<li>18-55 yaş arası kadın ve erkek</li>
 <li><u>Not: Engelli bireylerin katılımında başka bir şart aranmamaktadır.</u></li>
 </ul>
 <div class="button-row"><a href="birey.html">BİREYSEL BAŞVURU YAP</a></div>
