--- a/concent.html
+++ b/concent.html
@@ -28,7 +28,7 @@
       olması nedeniyle Dijital Usta Projesine katılımınızın planlaması, gerçekleştirilmesi ve bunlara ilişkin iletişimin
       yürütülmesi amacıyla ve KVKK Madde 5/2 (f) uyarınca temel hak ve özgürlüklerinize zarar vermemek kaydıyla veri
       sorumlusu olarak meşru menfaatlerimiz için veri işlemenin zorunlu olması nedeniyle Nettel Basın Yayın Danışmanlık
-      Reklam Organizasyon San. ve Tic. Ltd. Şti. tarafından toplanmasını ve Habitat Derneği’nin gerekli görülecek
+      Reklam Organizasyon San. ve Tic. Ltd. Şti. tarafından toplanmasını ve gerekli görülecek
       eğitimlerin sağlanması ve sizinle irtibata geçilebilmesi amacıyla açık rızanız olmaksızın, özel nitelikli kişisel
       verileriniz ise KVKK Madde 6/2 uyarınca açık rızanız ile işlenmektedir. Ayrıca, iletişim izni vermeniz halinde
       kişisel verileriniz faaliyetler ile ilgili bilgi ve duyuruların tarafınıza ulaştırılması amacıyla işlenecektir.
@@ -68,10 +68,6 @@
       aracılığıyla iletişime geçebilirsiniz:</p>
     <p><b>Nettel Basın Yayın Danışmanlık Reklam Organizasyon San. ve Tic. Ltd. Şti.</b></p>
     <p>Hacı Bayram Mah. İbrahim Müteferrika Cad. Fazilet Han No: 4 İç Kapı No: 113 Altındağ/Ankara</p>
-    <p><b>Habitat Derneği</b></p>
-    <p>Salacak, Neyzenbaşı Halil Can Sk. No:21, 34668 Üsküdar/İstanbul</p>
-    <p>Tel: (0212) 265 33 14</p>
-    <p>E-posta: <a href="mailto:info@habitatdernegi.org">info@habitatdernegi.org</a></p>
     <p><strong>ÖZEL NİTELİKLİ KİŞİSEL VERİLERİN İŞLENMESİNE İLİŞKİN AÇIK RIZA FORMU</strong></p>
     <p>Dijital Usta Projesi kapsamında gerçekleştirilen etkinliklere&nbsp; katılımım çerçevesinde sunacağım Özel
       Nitelikli Kişisel Verilerimin Aydınlatma Metni kapsamında bilgilendirildiğim üzere işlenmesine rıza
