concent link fix

--- a/birey.html
+++ b/birey.html
@@ -82,7 +82,7 @@
 
       <label class="checkbox-label">
         <input type="checkbox" name="kvkk" required />
-        <span><b><a href="https://panel.dijitalusta.net/concent.html" target="_blank">Aydınlatma Metni</a>:</b> KVKK kapsamında kişisel verilerimin işlenmesini kabul ediyorum.</span>
+        <span><b><a href="./concent.html" target="_blank">Aydınlatma Metni</a>:</b> KVKK kapsamında kişisel verilerimin işlenmesini kabul ediyorum.</span>
       </label>
 
       <label class="checkbox-label">
