--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
     <section class="centered">
         <h2>Yanınızdayız Projesi Nedir?</h2>
-        <p>T.C. Ticaret Bakanlığı himayelerinde, Trendyol, TOBB ve MÜSİAD iş birliğiyle hayata geçirilen Dijital Usta Yanınızdayız projesi, bölgenin yeniden cazibe merkezi haline gelmesini hedefliyor. <br/>Amacımız girişimci adaylarına dijital yetkinlikler kazandırmak, KOBİ'lerin e-ticaret hacmini büyütmek ve bölge istihdamına katkı sağlamaktır.</p>
+        <p>T.C. Ticaret Bakanlığı himayelerinde, Trendyol, TOBB ve MÜSİAD iş birliğiyle hayata geçirilen Dijital Usta Yanınızdayız Projesi, bölgenin yeniden cazibe merkezi haline gelmesini hedefliyor. <br/>Amacımız girişimci adaylarına dijital yetkinlikler kazandırmak, KOBİ'lerin e-ticaret hacmini büyütmek ve bölge istihdamına katkı sağlamaktır.</p>
         <p>Proje bölgedeki bireylerin, KOBİ’lerin, kooperatiflerin ve esnafların katılımına açıktır.</p>
         <br/>
         <p>Proje deprem bölgesindeki 4 ilde uygulanmaktadır.</p>
@@ -31,7 +31,7 @@
 <div><span>1.</span><h3>Bireysel başvuranlar için</h3></div>
 <h2>Geleceğin Dijital Ustası Olmak İstiyorum</h2>
 <i>Kendini geliştir, iş fırsatlarını yakala veya kendi girişimini kur.</i>
-<h3>Sana Ne Sağlıyoruz?</h3>
+<h3>Size Ne Sağlıyoruz?</h3>
 <ul>
 <li><b>Ücretsiz Eğitimler:</b> Yapay zeka kullanımı, dijital pazarlama, e-ticaret ve e-ihracat alanlarında kapsamlı eğitimler.</li>
 <li><b>İstihdam Fırsatı:</b> Eğitimi başarıyla tamamlayan bireyler, bölgedeki KOBİ'ler tarafından istihdam edilme şansı yakalar.</li>
@@ -50,7 +50,7 @@
 <div><span>2.</span><h3>İşletme sahipleri için</h3></div>
 <h2>İşletmemi Büyütmek İstiyorum</h2>
 <i>E-ticaretle sınırları aşın, nitelikli personel desteğiyle gücünüze güç katın.</i>
-<h3>Sana Ne Sağlıyoruz?</h3>
+<h3>Size Ne Sağlıyoruz?</h3>
 <ul>
 <li><b>Komisyon Avantajı:</b> Proje kapsamında eğitim alan bir genci 12 ay istihdam etmeniz durumunda, Trendyol mağazada komisyon desteği ile satış avantajından faydalanırsınız.</li>
 <li><b>Nitelikli İstihdam:</b> Dijitalleşme ve e-ticaret konusunda eğitimli ve yetkin uzmanlarla çalışma fırsatı sağlanacak, söz konusu uzmanların istihdamına ilişkin ilk üç aylık maaş giderleri proje kapsamında karşılanacaktır.</li>
