--- a/concent.html
+++ b/concent.html
@@ -28,7 +28,7 @@
       olması nedeniyle Dijital Usta Projesine katılımınızın planlaması, gerçekleştirilmesi ve bunlara ilişkin iletişimin
       yürütülmesi amacıyla ve KVKK Madde 5/2 (f) uyarınca temel hak ve özgürlüklerinize zarar vermemek kaydıyla veri
       sorumlusu olarak meşru menfaatlerimiz için veri işlemenin zorunlu olması nedeniyle Nettel Basın Yayın Danışmanlık
-      Reklam Organizasyon San. ve Tic. Ltd. Şti. tarafından toplanmasını ve gerekli görülecek
+      Reklam Organizasyon San. ve Tic. Ltd. Şti. tarafından toplanmasını ve Habitat Derneği’nin gerekli görülecek
       eğitimlerin sağlanması ve sizinle irtibata geçilebilmesi amacıyla açık rızanız olmaksızın, özel nitelikli kişisel
       verileriniz ise KVKK Madde 6/2 uyarınca açık rızanız ile işlenmektedir. Ayrıca, iletişim izni vermeniz halinde
       kişisel verileriniz faaliyetler ile ilgili bilgi ve duyuruların tarafınıza ulaştırılması amacıyla işlenecektir.
