--- a/concent.html
+++ b/concent.html
@@ -68,6 +68,10 @@
       aracılığıyla iletişime geçebilirsiniz:</p>
     <p><b>Nettel Basın Yayın Danışmanlık Reklam Organizasyon San. ve Tic. Ltd. Şti.</b></p>
     <p>Hacı Bayram Mah. İbrahim Müteferrika Cad. Fazilet Han No: 4 İç Kapı No: 113 Altındağ/Ankara</p>
+    <p><b>Habitat Derneği</b></p>
+    <p>Salacak, Neyzenbaşı Halil Can Sk. No:21, 34668 Üsküdar/İstanbul</p>
+    <p>Tel: (0212) 265 33 14</p>
+    <p>E-posta: <a href="mailto:info@habitatdernegi.org">info@habitatdernegi.org</a></p>
     <p><strong>ÖZEL NİTELİKLİ KİŞİSEL VERİLERİN İŞLENMESİNE İLİŞKİN AÇIK RIZA FORMU</strong></p>
     <p>Dijital Usta Projesi kapsamında gerçekleştirilen etkinliklere&nbsp; katılımım çerçevesinde sunacağım Özel
       Nitelikli Kişisel Verilerimin Aydınlatma Metni kapsamında bilgilendirildiğim üzere işlenmesine rıza
